--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.33",
     "@react-email/components": "0.0.19",
+    "ai": "^3.2.5",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.4.1",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "openai": "^4.52.0",
     "react": "^18",
     "react-dom": "^18",
     "react-email": "^2.1.4",
